--- a/css/style.css
+++ b/css/style.css
@@ -399,13 +399,13 @@ header section {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
 }
 
 .sec-5 {
     max-width: 1586px;
     margin: 95px auto 0 auto;
     display: flex;
-    /* justify-content: flex-end; */
     padding: 40px 30px;
 }
 
@@ -429,7 +429,6 @@ header section {
 }
 
 .sec-5-wrap-2 {
-    /* background-color: magenta; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -460,13 +459,15 @@ header section {
     margin: 50px 0 40px 0;
 }
 
-.sec-5-left a {
+.sec-5-btn {
     background-color: #FF3F40;
     width: 350px;
     height: 75px;
     text-transform: uppercase;
     color: white;
     margin-bottom: 10px;
+    border: none;
+    border-radius: 15px;
 }
 .sec-5-right {
     background-color: #2D2D2D;
